flock-web/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flock-web
  namespace: default
  labels:
    app: flock-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flock-web
  template:
    metadata:
      labels:
        app: flock-web
    spec:
      containers:
        - name: flock-web
          image: wcygan/flock-web:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
