flock-web/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flock-web
  namespace: default
  labels:
    app: flock-web
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: flock-web
