flock-web/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flock-web-ingress
  annotations:
    tailscale.com/hostname: "app"
    tailscale.com/funnel: "true"
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - app
  rules:
    - host: app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flock-web
                port:
                  number: 3000
